commented out the controller script for the meditation page in the index file and commented out the controllers in the main.js file so i no longer have errors thrown on the inspect element. solved the whitespace issue by setting padding to zero in the scss file on the meditationPage class.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -72,10 +72,11 @@ body {
  {
     background-size: cover;
     background-image: url(http://gelohealthcare.com/wp-content/uploads/2015/02/yoga-art-photography-a47iwi9q.jpg);
-    max-height: 100vh;
+    height: 100vh;
     width: 100%;
     background-position-x: 50%;
     background-position-y: 50%;
+    padding:0;
   }
 
 //play button stays centered min/max width, responsive
